updating the index.html/ README

--- a/index.html
+++ b/index.html
@@ -742,16 +742,74 @@ asciidoc.install();
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph"><p>In theory, you need to authorize this application to access your twitter, facebook, linkedin etc&#8230;and it will search through your entire history and remove any posts that older then N number of days old.</p></div>
+<div class="paragraph"><p>Social Media Clean up tool.</p></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_status">Status</h2>
+<div class="sectionbody">
+<div class="paragraph"><p>Currently supported social media services:</p></div>
+<div class="ulist"><ul>
+<li>
+<p>
+Twitter
+</p>
+</li>
+</ul></div>
+<div class="paragraph"><p>Future plans in order of priority:</p></div>
+<div class="olist arabic"><ol class="arabic">
+<li>
+<p>
+Facebook
+</p>
+</li>
+<li>
+<p>
+LinkedIn
+</p>
+</li>
+<li>
+<p>
+FourSquare
+</p>
+</li>
+<li>
+<p>
+Amazon (reviews and such )
+</p>
+</li>
+</ol></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_privacy">Privacy</h2>
+<div class="sectionbody">
+<div class="paragraph"><p>This application WILL request just about every permission under the sun to all of your social media accounts.  It should not be persisting any data or tokens past the one time run.  Though I would advise you to revoke the rights to this application once your cleanup is done.</p></div>
+<div class="paragraph"><p>I&#8217;m not sure if this will ever transition over to a web app / service of some form, but for the time being, the way it&#8217;s structured there should be no need for it to retrain any permissions.</p></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_what_does_it_do">What Does It Do?</h2>
+<div class="sectionbody">
+<div class="paragraph"><p>Currently, you need to authorize this application to access your social media account and it will search through your entire history and remove any posts that are older then N number of days old.</p></div>
+<div class="paragraph"><p>Naturally deleting the account will accomplish this more quickly.  This tool presume you&#8217;ll keep on using social media and just cleans off a bit of your social online <em>fingerprint</em> that doesn&#8217;t need to be there.</p></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_motivation">Motivation</h2>
+<div class="sectionbody">
+<div class="paragraph"><p>I&#8217;m a bit paranoid about personal information, and some content really doesn&#8217;t serve any purpose beyond a certain shelf life.  Tweets especially are utterly useless past a certain point.  There has been so much talk about personal privacy yet little has really been done about it.  This program which probably should exist as a webservice (at some point), will basically eat away on your social prescence after a certain point.</p></div>
+<div class="paragraph"><p>Far too much about your identify, political leanings, beliefs can be determined based on what you leave behind.  Data mining the information, combined with your geolocation and very simple census data can be used to derive all sorts of things about you.</p></div>
+<div class="paragraph"><p>Most people use social media to interact with friends, coworkers and such.  This tries to remove the trail of data you leave behind while still allowing you to do just that.</p></div>
+</div>
 <hr>
 <a href="ChangeLog.html">ChangeLog</a>
-</div>
 </div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-12-23 18:38:45 CST
+Last updated 2013-01-13 19:06:28 CST
 </div>
 </div>
 </body>
