--- a/index.html
+++ b/index.html
@@ -771,12 +771,22 @@ asciidoc.install(2);
 Twitter
 </p>
 </li>
+<li>
+<p>
+Facebook (In Progress)
+</p>
+</li>
 </ul></div>
-<div class="paragraph"><p>Future plans in order of priority:</p></div>
+<div class="paragraph"><p>Future plans in order of priority (based on creepiness factor):</p></div>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
-Facebook
+FourSquare
+</p>
+</li>
+<li>
+<p>
+Instagram
 </p>
 </li>
 <li>
@@ -786,18 +796,19 @@ LinkedIn
 </li>
 <li>
 <p>
-FourSquare
+Amazon (reviews and such )
 </p>
 </li>
 <li>
 <p>
-Amazon (reviews and such )
+Others? ( Requests? Open up an <a href="https://github.com/SocialLangoliers/SocialLangoliers/issues">Github Issue</a>
+)
 </p>
 </li>
 </ol></div>
 <div class="sect2">
 <h3 id="_changelog">ChangeLog</h3>
-<div class="paragraph"><p><a href="http://safaci2000.github.com/SocialLangoliers/ChangeLog.html">ChangeLog</a></p></div>
+<div class="paragraph"><p><a href="http://sociallangoliers.github.com/SocialLangoliers/ChangeLog.html">ChangeLog</a></p></div>
 </div>
 </div>
 </div>
@@ -827,7 +838,7 @@ Amazon (reviews and such )
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-01-15 20:18:53 PST
+Last updated 2013-02-17 15:10:32 PST
 </div>
 </div>
 </body>
